--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 <!-- Footer -->
 <footer class="bg-gray-50 py-8 px-4 text-center text-gray-500 text-sm">
     <div class="max-w-4xl mx-auto">
-        <p>© 2025 Respiwork. All rights reserved.</p>
+        <p>© 2025 Respirework. All rights reserved.</p>
         <p class="mt-2"><strong>Onyx Storm: The Empyrean #3</strong> is available worldwide in digital format.</p>
         <div class="mt-4">
             <a href="https://yourwebsite.com/privacy" class="text-blue-600 hover:underline">Privacy Policy</a> | 
@@ -387,7 +387,7 @@
         <div class="mt-4">
             <span itemscope itemtype="http://schema.org/Organization">
                 <link itemprop="url" href="https://yourwebsite.com">
-                <span itemprop="name">Respiwork</span>
+                <span itemprop="name">Respirework</span>
             </span>
         </div>
     </div>
