--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="book">
     <meta property="og:url" content="https://yourwebsite.com/onyx-storm">
     <meta property="og:image" content="https://yourwebsite.com/images/onyx-storm-cover.jpg">
-    <meta property="og:site_name" content="Respiwork">
+    <meta property="og:site_name" content="Respirework">
     <meta property="book:author" content="Rebecca Yarros">
     <meta property="book:isbn" content="9781234567890">
     <meta property="book:release_date" content="2023-06-01">
