--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <meta name="twitter:image" content="https://yourwebsite.com/images/onyx-storm-cover.jpg">
     
     <!-- RSS Feeds -->
-    <link rel="alternate" type="application/rss+xml" title="Rebecca Yarros New Releases" href="https://yourwebsite.com/rss/rebecca-yarros">
-    <link rel="alternate" type="application/rss+xml" title="The Empyrean Series Updates" href="https://yourwebsite.com/rss/empyrean-series">
+    <link rel="alternate" type="application/rss+xml" title="Rebecca Yarros New Releases" href="https://respirework.com/rss/rebecca-yarros">
+    <link rel="alternate" type="application/rss+xml" title="The Empyrean Series Updates" href="https://respirework.com/rss/empyrean-series">
     
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
