--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <a href="https://yourwebsite.com/empyrean-reading-guide" class="text-blue-600 text-sm hover:underline" rel="nofollow">Read more →</a>
             </div>
             <div class="text-center mt-4">
-                <a href="https://yourwebsite.com/rss/empyrean-series" class="text-blue-600 hover:underline" rel="nofollow"><i class="fas fa-rss mr-1"></i> Subscribe to RSS Feed</a>
+                <a href="https://respirework.com/rss/empyrean-series" class="text-blue-600 hover:underline" rel="nofollow"><i class="fas fa-rss mr-1"></i> Subscribe to RSS Feed</a>
             </div>
         </div>
 
