--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <meta name="twitter:image" content="https://yourwebsite.com/images/onyx-storm-cover.jpg">
     
     <!-- RSS Feeds -->
-    <link rel="alternate" type="application/rss+xml" title="Rebecca Yarros New Releases" href="https://respirework.com/rss/rebecca-yarros.xml">
-    <link rel="alternate" type="application/rss+xml" title="The Empyrean Series Updates" href="https://respirework.com/rss/empyrean-series.xml">
+    <link rel="alternate" type="application/rss+xml" title="Rebecca Yarros New Releases" href="https://respirework.com/rss/rebecca-yarros">
+    <link rel="alternate" type="application/rss+xml" title="The Empyrean Series Updates" href="https://respirework.com/rss/empyrean-series">
     
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -136,6 +136,28 @@
             text-decoration: underline;
         }
     </style>
+
+<style>
+.sticky-cta {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #343a40; /* dark theme */
+  color: #fff;
+  padding: 12px 20px;
+  border-radius: 6px;
+  font-weight: 600;
+  font-family: sans-serif;
+  text-decoration: none;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  z-index: 1000;
+  transition: background 0.3s ease;
+}
+.sticky-cta:hover {
+  background-color: #495057;
+}
+</style>
+
 </head>
 <body class="bg-white font-sans text-gray-800">
     <!-- Hero Section -->
@@ -183,7 +205,7 @@
                 <a href="https://yourwebsite.com/empyrean-reading-guide" class="text-blue-600 text-sm hover:underline" rel="nofollow">Read more →</a>
             </div>
             <div class="text-center mt-4">
-                <a href="https://respirework.com/rss/empyrean-series.xml" class="text-blue-600 hover:underline" rel="nofollow"><i class="fas fa-rss mr-1"></i> Subscribe to RSS Feed</a>
+                <a href="https://respirework.com/rss/empyrean-series" class="text-blue-600 hover:underline" rel="nofollow"><i class="fas fa-rss mr-1"></i> Subscribe to RSS Feed</a>
             </div>
         </div>
 
@@ -334,10 +356,10 @@
     <h3 class="text-xl font-bold">Stay Updated</h3>
     <p class="mb-4">Never miss an update about <strong>The Empyrean series</strong>, author events, and exclusive content.</p>
     <div class="flex flex-col sm:flex-row justify-center gap-4">
-        <a href="https://respirework.com/rss/empyrean-series.xml" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded inline-flex items-center" rel="nofollow">
+        <a href="https://respirework.com/rss/empyrean-series" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded inline-flex items-center" rel="nofollow">
             <i class="fas fa-rss mr-2"></i> Subscribe to Book Updates
         </a>
-        <a href="https://respirework.com/rss/rebecca-yarros.xml" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded inline-flex items-center" rel="nofollow">
+        <a href="https://respirework.com/rss/rebecca-yarros" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded inline-flex items-center" rel="nofollow">
             <i class="fas fa-rss mr-2"></i> Subscribe to Author News
         </a>
     </div>
