--- a/index.html
+++ b/index.html
@@ -374,6 +374,15 @@
 </div>
 
 <!-- Footer -->
+
+<section id="rss-feeds" style="padding: 2em 0;">
+  <h2>Follow Our RSS Feeds</h2>
+  <ul>
+    <li><a href="/rss/empyrean-series">Empyrean Series RSS Feed</a></li>
+    <li><a href="/rss/rebecca-yarros">Rebecca Yarros News Feed</a></li>
+  </ul>
+</section>
+
 <footer class="bg-gray-50 py-8 px-4 text-center text-gray-500 text-sm">
     <div class="max-w-4xl mx-auto">
         <p>© 2025 Respirework. All rights reserved.</p>
