--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <meta name="twitter:image" content="https://yourwebsite.com/images/onyx-storm-cover.jpg">
     
     <!-- RSS Feeds -->
-    <link rel="alternate" type="application/rss+xml" title="Rebecca Yarros New Releases" href="https://respirework.com/rss/rebecca-yarros.xml">
-    <link rel="alternate" type="application/rss+xml" title="The Empyrean Series Updates" href="https://respirework.com/rss/empyrean-series.xml">
+    <link rel="alternate" type="application/rss+xml" title="Rebecca Yarros New Releases" href="https://respirework.com/rss/empyrean-series.xml">
+    <link rel="alternate" type="application/rss+xml" title="The Empyrean Series Updates" href="https://respirework.com/rss/rebecca-yarros.xml">
     
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -205,7 +205,7 @@
                 <a href="https://yourwebsite.com/empyrean-reading-guide" class="text-blue-600 text-sm hover:underline" rel="nofollow">Read more →</a>
             </div>
             <div class="text-center mt-4">
-                <a href="https://respirework.com/rss/empyrean-series" class="text-blue-600 hover:underline" rel="nofollow"><i class="fas fa-rss mr-1"></i> Subscribe to RSS Feed</a>
+                <a href="https://respirework.com/rss/empyrean-series.xml" class="text-blue-600 hover:underline" rel="nofollow"><i class="fas fa-rss mr-1"></i> Subscribe to RSS Feed</a>
             </div>
         </div>
 
@@ -374,14 +374,6 @@
 </div>
 
 <!-- Footer -->
-
-<section id="rss-feeds" style="padding: 2em 0;">
-  <h2>Follow Our RSS Feeds</h2>
-  <ul>
-    <li><a href="/rss/empyrean-series">Empyrean Series RSS Feed</a></li>
-    <li><a href="/rss/rebecca-yarros">Rebecca Yarros News Feed</a></li>
-  </ul>
-</section>
 
 <footer class="bg-gray-50 py-8 px-4 text-center text-gray-500 text-sm">
     <div class="max-w-4xl mx-auto">
