--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <a href="https://yourwebsite.com/empyrean-reading-guide" class="text-blue-600 text-sm hover:underline" rel="nofollow">Read more →</a>
             </div>
             <div class="text-center mt-4">
-                <a href="https://respirework.com/rss/empyrean-series.xml" class="text-blue-600 hover:underline" rel="nofollow"><i class="fas fa-rss mr-1"></i> Subscribe to RSS Feed</a>
+                <a href="https://respirework.com/rss/empyrean-series.html" class="text-blue-600 hover:underline" rel="nofollow"><i class="fas fa-rss mr-1"></i> Subscribe to RSS Feed</a>
             </div>
         </div>
 
@@ -356,10 +356,10 @@
     <h3 class="text-xl font-bold">Stay Updated</h3>
     <p class="mb-4">Never miss an update about <strong>The Empyrean series</strong>, author events, and exclusive content.</p>
     <div class="flex flex-col sm:flex-row justify-center gap-4">
-        <a href="https://respirework.com/rss/empyrean-series.xml" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded inline-flex items-center" rel="nofollow">
+        <a href="https://respirework.com/rss/empyrean-series.html" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded inline-flex items-center" rel="nofollow">
             <i class="fas fa-rss mr-2"></i> Subscribe to Book Updates
         </a>
-        <a href="https://respirework.com/rss/rebecca-yarros.xml" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded inline-flex items-center" rel="nofollow">
+        <a href="https://respirework.com/rss/rebecca-yarros.html" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded inline-flex items-center" rel="nofollow">
             <i class="fas fa-rss mr-2"></i> Subscribe to Author News
         </a>
     </div>
