--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             <a href="https://respirework.com/privacy" class="text-blue-600 hover:underline">Privacy Policy</a> | 
             <a href="https://respirework.com/terms" class="text-blue-600 hover:underline">Terms of Service</a> | 
             <a href="https://respirework.com/contact" class="text-blue-600 hover:underline">Contact Us</a> | 
-            <a href="https://respirework.com/rss" class="text-blue-600 hover:underline">RSS Feeds</a>
+            <a href="https://respirework.com/rss-feeds" class="text-blue-600 hover:underline">RSS Feeds</a>
         </div>
         <div class="mt-4">
             <span itemscope itemtype="http://schema.org/Organization">
