--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
         .breadcrumb a:hover {
             text-decoration: underline;
         }
-    </style>
+    html { scroll-behavior: smooth; }
+</style>
 
 <style>
 .sticky-cta {
@@ -156,6 +157,7 @@
 .sticky-cta:hover {
   background-color: #495057;
 }
+html { scroll-behavior: smooth; }
 </style>
 
 </head>
@@ -380,10 +382,10 @@
         <p>© 2025 Respirework. All rights reserved.</p>
         <p class="mt-2"><strong>Onyx Storm: The Empyrean #3</strong> is available worldwide in digital format.</p>
         <div class="mt-4">
-            <a href="https://respirework.com/privacy" class="text-blue-600 hover:underline">Privacy Policy</a> | 
-            <a href="https://respirework.com/terms" class="text-blue-600 hover:underline">Terms of Service</a> | 
-            <a href="https://respirework.com/contact" class="text-blue-600 hover:underline">Contact Us</a> | 
-            <a href="https://respirework.com/rss-feeds" class="text-blue-600 hover:underline">RSS Feeds</a>
+            <a href="https://yourwebsite.com/privacy" class="text-blue-600 hover:underline">Privacy Policy</a> | 
+            <a href="https://yourwebsite.com/terms" class="text-blue-600 hover:underline">Terms of Service</a> | 
+            <a href="https://yourwebsite.com/contact" class="text-blue-600 hover:underline">Contact Us</a> | 
+            <a href="https://yourwebsite.com/rss" class="text-blue-600 hover:underline">RSS Feeds</a>
         </div>
         <div class="mt-4">
             <span itemscope itemtype="http://schema.org/Organization">
@@ -394,3 +396,34 @@
     </div>
 </footer>
 </html>
+
+<section id="privacy" class="py-12 px-4 bg-gray-50">
+  <div class="max-w-4xl mx-auto">
+    <h2 class="text-2xl font-bold mb-4">Privacy Policy</h2>
+    <p>We respect your privacy. We don’t sell or share your data. This site uses cookies for analytics only.</p>
+  </div>
+</section>
+
+<section id="terms" class="py-12 px-4 bg-white">
+  <div class="max-w-4xl mx-auto">
+    <h2 class="text-2xl font-bold mb-4">Terms and Conditions</h2>
+    <p>By using this site, you agree to our digital content usage terms. Refunds are not available for downloadable items.</p>
+  </div>
+</section>
+
+<section id="contact" class="py-12 px-4 bg-gray-50">
+  <div class="max-w-4xl mx-auto">
+    <h2 class="text-2xl font-bold mb-4">Contact Us</h2>
+    <p>Email us at <a href="mailto:support@respirework.com" class="text-blue-600 hover:underline">support@respirework.com</a>.</p>
+  </div>
+</section>
+
+<section id="rss" class="py-12 px-4 bg-white">
+  <div class="max-w-4xl mx-auto">
+    <h2 class="text-2xl font-bold mb-4">RSS Feeds</h2>
+    <ul>
+      <li><a href="/rss/empyrean-series.xml" class="text-blue-600 hover:underline">Empyrean Series RSS Feed</a></li>
+      <li><a href="/rss/rebecca-yarros.xml" class="text-blue-600 hover:underline">Rebecca Yarros News Feed</a></li>
+    </ul>
+  </div>
+</section>
