--- a/index.html
+++ b/index.html
@@ -380,9 +380,9 @@
         <p>© 2025 Respirework. All rights reserved.</p>
         <p class="mt-2"><strong>Onyx Storm: The Empyrean #3</strong> is available worldwide in digital format.</p>
         <div class="mt-4">
-            <a href="https://yourwebsite.com/privacy" class="text-blue-600 hover:underline">Privacy Policy</a> | 
-            <a href="https://yourwebsite.com/terms" class="text-blue-600 hover:underline">Terms of Service</a> | 
-            <a href="https://yourwebsite.com/contact" class="text-blue-600 hover:underline">Contact Us</a> | 
+            <a href="https://www.respirework.com/privacy.html" class="text-blue-600 hover:underline">Privacy Policy</a> | 
+            <a href="https://www.respirework.com/terms.html" class="text-blue-600 hover:underline">Terms of Service</a> | 
+            <a href="https://www.respirework.com/contact.html" class="text-blue-600 hover:underline">Contact Us</a> | 
             <a href="https://www.respirework.com/rss.html" class="text-blue-600 hover:underline">RSS Feeds</a>
         </div>
         <div class="mt-4">
