--- a/privacy.html
+++ b/privacy.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy</title>
+  <title>Privacy Policy - Respirework</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="How we handle your personal data.">
+  <meta name="description" content="Google-compliant privacy policy for Respirework.">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
 <body class="bg-gray-50 text-gray-800 font-sans py-12 px-4">
   <div class="max-w-4xl mx-auto">
     <h1 class="text-3xl font-bold mb-6">Privacy Policy</h1>
-    <p>We respect your privacy. No personal data is sold or shared. This site uses cookies for functionality and analytics only.</p>
+    <p class="mb-4">Effective Date: May 23, 2025</p>
+    <p class="mb-4">At Respirework, your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your personal data in accordance with Google's requirements and international privacy standards.</p>
+    <ul class="list-disc pl-6 mb-6 space-y-2">
+      <li>We collect personal information such as name and email address when you subscribe or purchase.</li>
+      <li>We use cookies and analytics to understand user behavior and improve our services.</li>
+      <li>Data is stored securely and only shared with third parties for payment or email processing.</li>
+      <li>You have the right to access, modify, or delete your data at any time.</li>
+    </ul>
+    <p class="mb-4">We comply with GDPR and CCPA guidelines. If you have any questions or concerns about your privacy, contact us at <a href="mailto:support@respirework.com" class="text-blue-600 hover:underline">support@respirework.com</a>.</p>
   </div>
 </body>
 </html>
