--- a/terms.html
+++ b/terms.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>Terms and Conditions</title>
+  <title>Terms and Conditions - Respirework</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Terms for using Respirework.">
+  <meta name="description" content="Terms of service and user agreement for Respirework.">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
-<body class="bg-gray-50 text-gray-800 font-sans py-12 px-4">
+<body class="bg-white text-gray-800 font-sans py-12 px-4">
   <div class="max-w-4xl mx-auto">
     <h1 class="text-3xl font-bold mb-6">Terms and Conditions</h1>
-    <p>By using this site, you agree to our terms. All digital products are non-refundable. Terms may be updated without notice.</p>
+    <p class="mb-4">Effective Date: May 23, 2025</p>
+    <p class="mb-4">By accessing or using Respirework.com, you agree to the following terms:</p>
+    <ul class="list-disc pl-6 mb-6 space-y-2">
+      <li>All content is for personal, non-commercial use only.</li>
+      <li>Digital products are delivered immediately and are non-refundable.</li>
+      <li>We reserve the right to change these terms without notice.</li>
+      <li>Any misuse, hacking, or redistribution of content is strictly prohibited.</li>
+    </ul>
+    <p class="mb-4">If you do not agree with these terms, please do not use this website. For questions, contact us at <a href="mailto:support@respirework.com" class="text-blue-600 hover:underline">support@respirework.com</a>.</p>
   </div>
 </body>
 </html>
