--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   gtag('config', 'G-FECYK088XF');
 </script>
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9911531576192254"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onyx Storm: The Empyrean #3 by Rebecca Yarros | Epic Fantasy eBook</title>
