--- a/index.html
+++ b/index.html
@@ -214,28 +214,34 @@ src="https://www.facebook.com/tr?id=3570519983243116&ev=PageView&noscript=1"
     <div class="max-w-4xl mx-auto px-4 py-12">
         <!-- RSS Feed Section -->
         <div class="rss-feed">
-            <h3 class="text-xl font-bold">Latest Updates</h3>
-            <div class="rss-item">
-                <h4 class="font-semibold">New Behind-the-Scenes Content Released</h4>
-                <p class="text-sm text-gray-600 mb-1">Posted: June 15, 2023</p>
-                <p class="text-gray-700">Author Rebecca Yarros shares exclusive insights into the creation of Onyx Storm in her latest blog post.</p>
-                <a href="https://respirework.com/blog/onyx-storm-behind-scenes" class="text-blue-600 text-sm hover:underline" rel="nofollow">Read more →</a>
-            </div>
-            <div class="rss-item">
-                <h4 class="font-semibold">Upcoming Virtual Book Signing Event</h4>
-                <p class="text-sm text-gray-600 mb-1">Posted: June 10, 2023</p>
-                <p class="text-gray-700">Join Rebecca Yarros for a special virtual event celebrating the release of Onyx Storm.</p>
-                <a href="https://respirework.com/events/virtual-book-signing" class="text-blue-600 text-sm hover:underline" rel="nofollow">Read more →</a>
-            </div>
-            <div class="rss-item">
-                <h4 class="font-semibold">The Empyrean Series Reading Guide</h4>
-                <p class="text-sm text-gray-600 mb-1">Posted: June 5, 2023</p>
-                <p class="text-gray-700">New to the series? Check out our comprehensive reading guide to catch up before diving into Onyx Storm.</p>
-                <a href="https://respirework.com/empyrean-reading-guide" class="text-blue-600 text-sm hover:underline" rel="nofollow">Read more →</a>
-            </div>
-            <div class="text-center mt-4">
-                <a href="https://respirework.com/rss/empyrean-series.html" class="text-blue-600 hover:underline" rel="nofollow"><i class="fas fa-rss mr-1"></i> Subscribe to RSS Feed</a>
-            </div>
+  <h3 class="text-xl font-bold">Latest Updates</h3>
+
+  <div class="rss-item">
+    <h4 class="font-semibold">New Behind-the-Scenes Content Released</h4>
+    <p class="text-sm text-gray-600 mb-1">Posted: June 15, 2023</p>
+    <p class="text-gray-700">Author Rebecca Yarros shares exclusive insights into the creation of Onyx Storm in her latest blog post.</p>
+    <a href="https://www.respirework.com" class="text-blue-600 text-sm hover:underline" rel="nofollow">Read more →</a>
+  </div>
+
+  <div class="rss-item">
+    <h4 class="font-semibold">Upcoming Virtual Book Signing Event</h4>
+    <p class="text-sm text-gray-600 mb-1">Posted: June 10, 2023</p>
+    <p class="text-gray-700">Join Rebecca Yarros for a special virtual event celebrating the release of Onyx Storm.</p>
+    <a href="https://www.respirework.com" class="text-blue-600 text-sm hover:underline" rel="nofollow">Read more →</a>
+  </div>
+
+  <div class="rss-item">
+    <h4 class="font-semibold">The Empyrean Series Reading Guide</h4>
+    <p class="text-sm text-gray-600 mb-1">Posted: June 5, 2023</p>
+    <p class="text-gray-700">New to the series? Check out our comprehensive reading guide to catch up before diving into Onyx Storm.</p>
+    <a href="https://www.respirework.com" class="text-blue-600 text-sm hover:underline" rel="nofollow">Read more →</a>
+  </div>
+
+  <div class="text-center mt-4">
+    <a href="https://respirework.com/rss/empyrean-series.html" class="text-blue-600 hover:underline" rel="nofollow">
+      <i class="fas fa-rss mr-1"></i> Subscribe to RSS Feed
+    </a>
+  </div>
         </div>
 
         <!-- Book Description Section -->
