--- a/index.html
+++ b/index.html
@@ -191,6 +191,12 @@ src="https://www.facebook.com/tr?id=3570519983243116&ev=PageView&noscript=1"
 
 </head>
 <body class="bg-white font-sans text-gray-800">
+    <script type="text/javascript">
+   var uid = '490709';
+   var wid = '740750';
+   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+    </script>
     <!-- Hero Section -->
     <div class="gradient-bg py-12 px-4">
         <div class="max-w-4xl mx-auto text-center">
