--- a/index.html
+++ b/index.html
@@ -410,6 +410,22 @@ src="https://www.facebook.com/tr?id=3570519983243116&ev=PageView&noscript=1"
 </div>
 </div>
 
+<!-- Inserted Popcash script -->
+<script type="text/javascript">
+   var uid = '490709';
+   var wid = '740750';
+   var pop_tag = document.createElement('script');
+   pop_tag.src='//cdn.popcash.net/show.js';
+   document.body.appendChild(pop_tag);
+   pop_tag.onerror = function() {
+      pop_tag = document.createElement('script');
+      pop_tag.src='//cdn2.popcash.net/show.js';
+      document.body.appendChild(pop_tag)
+   };
+</script>
+
+</body>
+  
 <!-- Footer -->
 
 <footer class="bg-gray-50 py-8 px-4 text-center text-gray-500 text-sm">
