--- a/index.html
+++ b/index.html
@@ -190,7 +190,12 @@ src="https://www.facebook.com/tr?id=3570519983243116&ev=PageView&noscript=1"
 
 </head>
 <body class="bg-white font-sans text-gray-800">
-    <!-- Hero Section -->
+<script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: 'opexueku48',
+    });
+</script>
+  <!-- Hero Section -->
     <div class="gradient-bg py-12 px-4">
         <div class="max-w-4xl mx-auto text-center">
             <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-2">Onyx Storm</h1>
