--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   gtag('config', 'G-FECYK088XF');
 </script>
 <head>
+    <script defer data-cfasync='false' src='https://s.clickiocdn.com/t/243350_wv.js'></script>
     <link rel="alternate" type="application/rss+xml" title="RespireWork Feed" href="https://www.respirework.com/rss.xml" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9911531576192254"
      crossorigin="anonymous"></script>
