--- a/privacy.html
+++ b/privacy.html
@@ -20,5 +20,7 @@
     </ul>
     <p class="mb-4">We comply with GDPR and CCPA guidelines. If you have any questions or concerns about your privacy, contact us at <a href="mailto:support@respirework.com" class="text-blue-600 hover:underline">support@respirework.com</a>.</p>
   </div>
+<style>body.clickio-cmp-in-scope .clickio-cmp-settings-display { display: inherit !important; }</style>
+<a class="clickio-cmp-settings-text clickio-cmp-settings-display" style="display:none;" href="#">Your Privacy Choices</a>
 </body>
 </html>
