--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         ezstandalone.showAds(101)
     });
 </script>
+    <script>
+    window.ezstandalone.cmd.push(function() {
+        ezstandalone.showAds();
+    });
+    </script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FECYK088XF"></script>
 <script>
