--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="http://schema.org/Book">
 <head>
+    <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="hilltopads-site-verification" content="20e0071eae92a1f9b1b4de6d1197ef930a9ab831" />
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FECYK088XF"></script>
 <script>
