--- a/index.html
+++ b/index.html
@@ -177,8 +177,10 @@
                     </div>
                     <h3 class="text-xl font-semibold mb-2">Rich Storytelling</h3>
                     <p class="text-gray-600">Immerse yourself in a world of political intrigue, ancient secrets, and personal transformation.</p>
+                </div>
+            </div>
 
-                    <!-- Ad Code 2 -->
+            <!-- Ad Code 2 -->
             <script>
                 (function(ksv){ 
                     var d = document, s = d.createElement('script'), l = d.scripts[d.scripts.length - 1]; 
@@ -189,9 +191,6 @@
                     l.parentNode.insertBefore(s, l); 
                 })({})
             </script>
-                    
-                </div>
-            </div>
 
             <h2 class="text-3xl font-bold text-gray-900 mb-6">Key Themes</h2>
             <h3 class="text-xl font-semibold text-gray-800 mb-3">The Power of Choice</h3>
@@ -407,4 +406,5 @@
             }
         });
     </script>
+<p style="border-radius: 8px; text-align: center; font-size: 12px; color: #fff; margin-top: 16px;position: fixed; left: 8px; bottom: 8px; z-index: 10; background: rgba(0, 0, 0, 0.8); padding: 4px 8px;">Made with <img src="https://enzostvs-deepsite.hf.space/logo.svg" alt="DeepSite Logo" style="width: 16px; height: 16px; vertical-align: middle;display:inline-block;margin-right:3px;filter:brightness(0) invert(1);"><a href="https://enzostvs-deepsite.hf.space" style="color: #fff;text-decoration: underline;" target="_blank" >DeepSite</a> - 🧬 <a href="https://enzostvs-deepsite.hf.space?remix=mark9joe/update-5" style="color: #fff;text-decoration: underline;" target="_blank" >Remix</a></p></body>
 </html>
